--- a/support-coding-business/build.gradle
+++ b/support-coding-business/build.gradle
@@ -21,5 +21,8 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
+
     api project(':support-coding-network')
+
+    implementation project(':support-coding-rxbus')
 }
