--- a/config.gradle
+++ b/config.gradle
@@ -10,33 +10,36 @@ ext {
 
     // 版本号
     dependVersion = [
-            junit                       : "4.12",
-            klog                        : "1.6.0",
-            constraintlayout            : "1.1.3",
-            supportVersion              : "1.0.0",
-            butterknife                 : "10.1.0",
-            retrofit2                   : "2.3.0",
-            bottomBar                   : "2.3.1",
-            okhttp3                     : "3.9.0",
-            leakcanary                  : "1.5.4",
-            glide                       : "4.9.0",
-            greendao                    : "2.1.0",
-            stetho                      : "1.5.0",
-            subsampling_scale_image_view: "3.10.0",
-            rxjava2                     : "2.1.3",
-            rxandroid                   : "2.1.1",
-            crashreport_upgrade         : "1.3.1"
+            constraintlayout: "1.1.3",
+            supportVersion  : "1.0.0",
+            butterknife     : "10.1.0",
+            retrofit2       : "2.3.0",
+            okhttp3         : "3.9.0",
+            leakcanary      : "1.5.4",
+            glide           : "4.9.0",
+            greendao        : "2.1.0",
+            stetho          : "1.5.0",
+            rxjava2         : "2.1.3",
+            rxandroid       : "2.1.1",
+            runner          : "1.1.1",
+            espresso_core   : "3.1.1"
     ]
 
     supportDeps = [
+            "appcompat"       : "androidx.appcompat:appcompat:${dependVersion.supportVersion}",
             "cardview"        : "androidx.cardview:cardview:${dependVersion.supportVersion}",
             "recyclerview"    : "androidx.recyclerview:recyclerview:${dependVersion.supportVersion}",
-            "constraintlayout": "androidx.constraintlayout:constraintlayout:${dependVersion.supportVersion}"
+            "constraintlayout": "androidx.constraintlayout:constraintlayout:${dependVersion.constraintlayout}",
     ]
 
-    logcat = [
-            "klog": "com.github.zhaokaiqiang.klog:library:${dependVersion.klog}"
+    commonsDeps = [
+            "klog"               : 'com.github.zhaokaiqiang.klog:library:1.6.0',
+            "bottombar"          : 'com.roughike:bottom-bar:2.3.1',
+            "scale-image-view"   : 'com.davemorrissey.labs:subsampling-scale-image-view:3.10.0',
+            "crashreport_upgrade": 'com.tencent.bugly:crashreport_upgrade:1.3.1',
+            "junit"              : 'junit:junit:4.12'
     ]
+
 
     butterknife = [
             "butterknife"         : "com.jakewharton:butterknife:${dependVersion.butterknife}",
@@ -75,21 +78,25 @@ ext {
             "stetho-okhttp3": "com.facebook.stetho:stetho-okhttp3:${dependVersion.stetho}"
     ]
 
-    bottomBar = [
-            "bottombar": "com.roughike:bottom-bar:${dependVersion.bottomBar}"
-    ]
-
-    subsamplingImage = [
-            "scale-image-view": "com.davemorrissey.labs:subsampling-scale-image-view:${dependVersion.subsampling_scale_image_view}"
-    ]
-
     rxjava2 = [
             // https://github.com/ReactiveX/RxJava
             "rxjava"   : "io.reactivex.rxjava2:rxjava:${dependVersion.rxjava2}",
             "rxandroid": "io.reactivex.rxjava2:rxandroid:${dependVersion.rxandroid}"
     ]
 
-    crashReport = [
-            "crashreport_upgrade": "com.tencent.bugly:crashreport_upgrade:${dependVersion.crashreport_upgrade}"
+    testDeps = [
+            "runner"       : "androidx.test:runner:${dependVersion.runner}",
+            "espresso_core": "androidx.test.espresso:espresso-core:${dependVersion.espresso_core}"
     ]
+
+    supportLibs = supportDeps.values()
+    commonsLibs = commonsDeps.values()
+    rxjavaLibs = rxjava2.values()
+    leakcanaryLibs = leakcanary.values()
+    okhttpLibs = okhttp3.values()
+    greendaoLibs = greendao.values()
+    stethoLibs = stetho.values()
+    butterknifeLibs = butterknife.values()
+    glideLibs = glide.values()
+    retrofitLibs = retrofit.values()
 }
