删除无用代码

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,4 +64,7 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation project(':support-coding-basic')
     debugImplementation rootProject.ext.leakcanary.leakcanary_android
+
+    implementation rootProject.ext.butterknife.butterknife
+    annotationProcessor rootProject.ext.compilerDeps.butterknife_compiler
 }
