--- a/support-coding-permission/build.gradle
+++ b/support-coding-permission/build.gradle
@@ -13,16 +13,14 @@ android {
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
 
 }
 
 dependencies {
-    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    api project(':support-coding-network')
-
-    implementation project(':support-coding-rxbus')
+    implementation 'com.yanzhenjie.permission:support:2.0.1'
 }
