--- a/config.gradle
+++ b/config.gradle
@@ -5,13 +5,15 @@ ext {
             applicationId    : "com.gank.gankly",
             minSdkversion    : 21,
             targetSdkVersion : 28,
-            versionName      : "1.0"
+            versionName      : "1.0",
+            moduleName       : "1.0",
+            moduleCode       : 1,
     ]
 
     // 版本号
     dependVersion = [
             constraintlayout: "1.1.3",
-            supportVersion  : "1.0.0",
+            support         : "1.0.0",
             butterknife     : "10.1.0",
             retrofit2       : "2.3.0",
             okhttp3         : "3.9.0",
@@ -22,74 +24,77 @@ ext {
             rxjava2         : "2.1.3",
             rxandroid       : "2.1.1",
             runner          : "1.1.1",
-            espresso_core   : "3.1.1"
+            espresso_core   : "3.1.1",
     ]
 
     supportDeps = [
-            "appcompat"       : "androidx.appcompat:appcompat:${dependVersion.supportVersion}",
-            "cardview"        : "androidx.cardview:cardview:${dependVersion.supportVersion}",
-            "recyclerview"    : "androidx.recyclerview:recyclerview:${dependVersion.supportVersion}",
-            "constraintlayout": "androidx.constraintlayout:constraintlayout:${dependVersion.constraintlayout}",
+            appcompat       : "androidx.appcompat:appcompat:${dependVersion.support}",
+            cardview        : "androidx.cardview:cardview:${dependVersion.support}",
+            recyclerview    : "androidx.recyclerview:recyclerview:${dependVersion.support}",
+            constraintlayout: "androidx.constraintlayout:constraintlayout:${dependVersion.constraintlayout}",
     ]
 
     commonsDeps = [
-            "klog"               : 'com.github.zhaokaiqiang.klog:library:1.6.0',
+            klog               : 'com.github.zhaokaiqiang.klog:library:1.6.0',
             // https://github.com/roughike/BottomBar
-            "bottombar"          : 'com.roughike:bottom-bar:2.3.1',
-            "scale_image"   : 'com.davemorrissey.labs:subsampling-scale-image-view:3.10.0',
-            "crashreport_upgrade": 'com.tencent.bugly:crashreport_upgrade:1.3.1',
-            "junit"              : 'junit:junit:4.12'
+            bottombar          : 'com.roughike:bottom-bar:2.3.1',
+            scale_image        : 'com.davemorrissey.labs:subsampling-scale-image-view:3.10.0',
+            crashreport_upgrade: 'com.tencent.bugly:crashreport_upgrade:1.3.1',
+            junit              : 'junit:junit:4.12',
+            // https://github.com/google/gson
+            gson               : 'com.google.code.gson:gson:2.8.5',
+            // https://github.com/jhy/jsoup
+            jsoup              : "org.jsoup:jsoup:1.11.3",
     ]
 
-
     butterknife = [
-            "butterknife": "com.jakewharton:butterknife:${dependVersion.butterknife}",
+            butterknife: "com.jakewharton:butterknife:${dependVersion.butterknife}",
     ]
 
     retrofit = [
-            "retrofit"       : "com.squareup.retrofit2:retrofit:${dependVersion.retrofit2}",
-            "converter_gson" : "com.squareup.retrofit2:converter-gson:${dependVersion.retrofit2}",
-            "adapter_rxjava2": "com.squareup.retrofit2:adapter-rxjava2:${dependVersion.retrofit2}"
+            retrofit       : "com.squareup.retrofit2:retrofit:${dependVersion.retrofit2}",
+            converter_gson : "com.squareup.retrofit2:converter-gson:${dependVersion.retrofit2}",
+            adapter_rxjava2: "com.squareup.retrofit2:adapter-rxjava2:${dependVersion.retrofit2}",
     ]
 
     okhttp3 = [
-            "okhttp"             : "com.squareup.okhttp3:okhttp:${dependVersion.okhttp3}",
-            "logging_interceptor": "com.squareup.okhttp3:logging-interceptor:${dependVersion.okhttp3}",
+            okhttp             : "com.squareup.okhttp3:okhttp:${dependVersion.okhttp3}",
+            logging_interceptor: "com.squareup.okhttp3:logging-interceptor:${dependVersion.okhttp3}",
     ]
 
     leakcanary = [
-            "leakcanary_android"      : "com.squareup.leakcanary:leakcanary-android:${dependVersion.leakcanary}",
+            leakcanary_android: "com.squareup.leakcanary:leakcanary-android:${dependVersion.leakcanary}",
     ]
 
     glide = [
-            "glide"              : "com.github.bumptech.glide:glide:${dependVersion.glide}",
-            "okhttp3_integration": "com.github.bumptech.glide:okhttp3-integration:${dependVersion.glide}",
+            glide              : "com.github.bumptech.glide:glide:${dependVersion.glide}",
+            okhttp3_integration: "com.github.bumptech.glide:okhttp3-integration:${dependVersion.glide}",
     ]
 
     greendao = [
-            "greendao"          : "de.greenrobot:greendao:${dependVersion.greendao}",
-            "greendao_generator": "de.greenrobot:greendao-generator:${dependVersion.greendao}"
+            greendao          : "de.greenrobot:greendao:${dependVersion.greendao}",
+            greendao_generator: "de.greenrobot:greendao-generator:${dependVersion.greendao}",
     ]
 
     stetho = [
-            "stetho"        : "com.facebook.stetho:stetho:${dependVersion.stetho}",
-            "stetho_okhttp3": "com.facebook.stetho:stetho-okhttp3:${dependVersion.stetho}"
+            stetho        : "com.facebook.stetho:stetho:${dependVersion.stetho}",
+            stetho_okhttp3: "com.facebook.stetho:stetho-okhttp3:${dependVersion.stetho}",
     ]
 
+    // https://github.com/ReactiveX/RxJava
     rxjava2 = [
-            // https://github.com/ReactiveX/RxJava
-            "rxjava"   : "io.reactivex.rxjava2:rxjava:${dependVersion.rxjava2}",
-            "rxandroid": "io.reactivex.rxjava2:rxandroid:${dependVersion.rxandroid}"
+            rxjava   : "io.reactivex.rxjava2:rxjava:${dependVersion.rxjava2}",
+            rxandroid: "io.reactivex.rxjava2:rxandroid:${dependVersion.rxandroid}",
     ]
 
     testDeps = [
-            "runner"       : "androidx.test:runner:${dependVersion.runner}",
-            "espresso_core": "androidx.test.espresso:espresso-core:${dependVersion.espresso_core}"
+            runner       : "androidx.test:runner:${dependVersion.runner}",
+            espresso_core: "androidx.test.espresso:espresso-core:${dependVersion.espresso_core}",
     ]
 
     compilerDeps = [
-            "glide_compiler"      : "com.github.bumptech.glide:compiler:${dependVersion.glide}",
-            "butterknife_compiler": "com.jakewharton:butterknife-compiler:${dependVersion.butterknife}"
+            glide_compiler      : "com.github.bumptech.glide:compiler:${dependVersion.glide}",
+            butterknife_compiler: "com.jakewharton:butterknife-compiler:${dependVersion.butterknife}",
     ]
 
     supportLibs = supportDeps.values()
