module 更改统一引用库

--- a/support-coding-file/build.gradle
+++ b/support-coding-file/build.gradle
@@ -23,4 +23,6 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     implementation rootProject.ext.supportDeps.appcompat
+    implementation project(path: ':support-coding-permission')
+
 }
