--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,22 +69,37 @@ dependencies {
     implementation project(':superplayerlibrary')
     implementation project(':support-coding-ui')
     implementation project(':support-coding-jsoup')
+
+    //
     implementation "androidx.appcompat:appcompat:${supportVersion}"
     implementation "com.google.android.material:material:${supportVersion}"
     implementation "androidx.cardview:cardview:${supportVersion}"
     implementation "androidx.recyclerview:recyclerview:${supportVersion}"
+    implementation "androidx.constraintlayout:constraintlayout:${constraintLayout}"
+
+    //
     implementation "com.github.zhaokaiqiang.klog:library:${klogVersion}"
+
+    //
     implementation "com.jakewharton:butterknife:${butterknife}"
     annotationProcessor "com.jakewharton:butterknife-compiler:${butterknife}"
+
+    //
     implementation "com.squareup.retrofit2:retrofit:${retrofitVersion}"
     implementation "com.squareup.retrofit2:retrofit-converters:${retrofitConverters}"
     implementation "com.squareup.retrofit2:retrofit-adapters:${retrofitAdapters}"
     implementation "com.squareup.retrofit2:converter-gson:${converterGson}"
     implementation "com.squareup.retrofit2:adapter-rxjava2:${adapterRxjava2}"
+
+    //
     implementation "com.squareup.okhttp3:okhttp:${okhttp}"
     implementation "com.squareup.okhttp3:logging-interceptor:${okhttp}"
+
+    // leakcanary
     debugImplementation "com.squareup.leakcanary:leakcanary-android:${leakcanaryandroid}"
     releaseImplementation "com.squareup.leakcanary:leakcanary-android-no-op:${leakcanaryandroid}"
+
+    //glide
     implementation "com.github.bumptech.glide:glide:${glide}"
     implementation "com.github.bumptech.glide:annotations:${glide}"
     implementation "com.github.bumptech.glide:okhttp3-integration:${glide}"
@@ -102,7 +117,7 @@ dependencies {
 //    implementation 'jp.wasabeef:recyclerview-animators:2.2.3'
 
     //底部导航  https://github.com/roughike/BottomBar
-    implementation ("com.roughike:bottom-bar:${bottomBar}"){
+    implementation("com.roughike:bottom-bar:${bottomBar}") {
         exclude group: 'com.android.support'
     }
 
@@ -115,5 +130,4 @@ dependencies {
     implementation "io.reactivex.rxjava2:rxjava:${rxjava}"
     implementation "io.reactivex.rxjava2:rxandroid:${rxandroid}"
     implementation "com.tencent.bugly:crashreport_upgrade:${crashreportUpgrade}"
-    implementation "androidx.constraintlayout:constraintlayout:${constraintLayout}"
 }
