--- a/support-coding-basic/build.gradle
+++ b/support-coding-basic/build.gradle
@@ -38,7 +38,7 @@ dependencies {
     api project(path: ':support-coding-network')
     api project(path: ':support-coding-download')
     api project(path: ':support-coding-file')
-
+    api project(path: ':support-coding-permission')
 
     api rootProject.ext.supportLibs
     api rootProject.ext.commonsLibs
@@ -47,4 +47,5 @@ dependencies {
     api rootProject.ext.greendaoLibs
     api rootProject.ext.glideLibs
     api rootProject.ext.retrofitLibs
+
 }
