--- a/config.gradle
+++ b/config.gradle
@@ -24,6 +24,8 @@ ext {
             rxandroid       : "2.1.1",
             runner          : "1.1.1",
             espresso_core   : "3.1.1",
+            kotlinVersion   : "1.3.21",
+            coreKtx         : "1.0.2",
     ]
 
     supportDeps = [
@@ -31,6 +33,7 @@ ext {
             cardview        : "androidx.cardview:cardview:${dependVersion.support}",
             recyclerview    : "androidx.recyclerview:recyclerview:${dependVersion.support}",
             constraintlayout: "androidx.constraintlayout:constraintlayout:${dependVersion.constraintlayout}",
+            coreKtx         : "androidx.core:core-ktx:${dependVersion.coreKtx}",
     ]
 
     commonsDeps = [
@@ -44,6 +47,10 @@ ext {
             gson               : 'com.google.code.gson:gson:2.8.5',
             // https://github.com/jhy/jsoup
             jsoup              : "org.jsoup:jsoup:1.11.3",
+    ]
+
+    kotlinDeps = [
+            kotlin: "org.jetbrains.kotlin:kotlin-gradle-plugin:${dependVersion.kotlinVersion}",
     ]
 
     butterknife = [
