--- a/support-coding-basic/build.gradle
+++ b/support-coding-basic/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     api project(path: ':support-coding-file')
     api project(path: ':support-coding-permission')
 
+    api rootProject.ext.kotlinDeps.kotlin
     api rootProject.ext.supportLibs
     api rootProject.ext.commonsLibs
     api rootProject.ext.rxjavaLibs
