--- a/config.gradle
+++ b/config.gradle
@@ -26,6 +26,7 @@ ext {
             espresso_core   : "3.1.1",
             kotlinVersion   : "1.3.21",
             coreKtx         : "1.0.2",
+            material        : "1.0.0",
     ]
 
     supportDeps = [
@@ -34,6 +35,7 @@ ext {
             recyclerview    : "androidx.recyclerview:recyclerview:${dependVersion.support}",
             constraintlayout: "androidx.constraintlayout:constraintlayout:${dependVersion.constraintlayout}",
             coreKtx         : "androidx.core:core-ktx:${dependVersion.coreKtx}",
+            material        : "com.google.android.material:material:${dependVersion.material}",
     ]
 
     commonsDeps = [
@@ -50,7 +52,7 @@ ext {
     ]
 
     kotlinDeps = [
-            kotlin: "org.jetbrains.kotlin:kotlin-gradle-plugin:${dependVersion.kotlinVersion}",
+            kotlin: "org.jetbrains.kotlin:kotlin-stdlib-jdk7:${dependVersion.kotlinVersion}",
     ]
 
     butterknife = [
