--- a/support-coding-ui/src/main/AndroidManifest.xml
+++ b/support-coding-ui/src/main/AndroidManifest.xml
@@ -1,2 +1,1 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="android.lectcoding.ui" />
+<manifest package="android.left.ui" />
