--- a/config.gradle
+++ b/config.gradle
@@ -39,16 +39,19 @@ ext {
     ]
 
     commonsDeps = [
-            klog               : 'com.github.zhaokaiqiang.klog:library:1.6.0',
-            scale_image        : 'com.davemorrissey.labs:subsampling-scale-image-view:3.10.0',
-            crashreport_upgrade: 'com.tencent.bugly:crashreport_upgrade:1.3.1',
-            junit              : 'junit:junit:4.12',
+            klog                  : 'com.github.zhaokaiqiang.klog:library:1.6.0',
+            scale_image           : 'com.davemorrissey.labs:subsampling-scale-image-view:3.10.0',
+            crashreport_upgrade   : 'com.tencent.bugly:crashreport_upgrade:1.3.1',
+            junit                 : 'junit:junit:4.12',
             // https://github.com/google/gson
-            gson               : 'com.google.code.gson:gson:2.8.5',
+            gson                  : 'com.google.code.gson:gson:2.8.5',
             // https://github.com/jhy/jsoup
-            jsoup              : "org.jsoup:jsoup:1.11.3",
+            jsoup                 : "org.jsoup:jsoup:1.11.3",
             // https://github.com/greenrobot/EventBus
-            eventbus           : 'org.greenrobot:eventbus:3.1.1',
+            eventbus              : 'org.greenrobot:eventbus:3.1.1',
+            // https://github.com/uber/AutoDispose
+            autoDispose           : "com.uber.autodispose:autodispose-android:1.3.0",
+            android_archcomponents: "com.uber.autodispose:autodispose-android-archcomponents:1.3.0",
     ]
 
     kotlinDeps = [
