--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,7 +52,7 @@
             android:name=".ui.gallery.GalleryActivity"
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
-            android:theme="@style/Design.Gallery" />
+            android:theme="@style/Design.App.Gallery" />
         <activity
             android:name=".ui.web.WebVideoViewActivity"
             android:launchMode="singleTask"
