--- a/support-permission/build.gradle
+++ b/support-permission/build.gradle
@@ -22,5 +22,6 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
+    implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.yanzhenjie.permission:support:2.0.1'
 }
