--- a/config.gradle
+++ b/config.gradle
@@ -50,8 +50,9 @@ ext {
             // https://github.com/greenrobot/EventBus
             eventbus              : 'org.greenrobot:eventbus:3.1.1',
             // https://github.com/uber/AutoDispose
-            autoDispose           : "com.uber.autodispose:autodispose-android:1.3.0",
-            android_archcomponents: "com.uber.autodispose:autodispose-android-archcomponents:1.3.0",
+            autoDispose           : 'com.uber.autodispose:autodispose-android:1.3.0',
+            android_archcomponents: 'com.uber.autodispose:autodispose-android-archcomponents:1.3.0',
+            permission_annimation : 'android.leftcoding:permission-annotation:1.0.2'
     ]
 
     kotlinDeps = [
