chore(*): 删除无用代码，修改清除网络请求顺序

--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,4 @@ support-coding-download/libs/
 support-coding-download/src/main/res/drawable/
 support-coding-file/libs/
 support-coding-file/src/main/res/drawable/
+!/.idea/
